--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <title>Simon</title>
 </head>
 <body>
     <h1 class="title">Press A Key To Start</h1>
     <div class="container">
         <div class="row">
-            <div class="green"></div>
-            <div class="red"></div>
+            <div class="btn green"></div>
+            <div class="btn red"></div>
         </div>
         <div class="row">
-            <div class="yellow"></div>
-            <div class="blue"></div>
+            <div class="btn yellow"></div>
+            <div class="btn blue"></div>
         </div>
     </div>
 </body>
