Add button type and id to the rectangles

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <h1 class="title">Press A Key To Start</h1>
     <div class="container">
         <div class="row">
-            <div class="btn green"></div>
-            <div class="btn red"></div>
+            <div type="button" id="green" class="btn green"></div>
+            <div type="button" id="red" class="btn red"></div>
         </div>
         <div class="row">
-            <div class="btn yellow"></div>
-            <div class="btn blue"></div>
+            <div type="button" id="yellow" class="btn yellow"></div>
+            <div type="button" id="blue" class="btn blue"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
