--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simon</title>
 </head>
 <body>
-    <h1 class="title">Press A Key To Start</h1>
+    <h1 class="title">Press Any Key To Start</h1>
     <div class="container">
         <div class="row">
             <div type="button" id="green" class="btn green"></div>
